# auto

./: .coverage  .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  IDEAS.md  LICENSE  PLAN.md  README.md  TODO.md  alembic.ini  db.py  dom_step_1_attempt_1.html  main.py  pyproject.toml  pytest.ini  requirements.txt  tasks.py
alembic/: env.py
automation_data/: dom_step_2_attempt_1.html  dom_step_3_attempt_1.html  execution_log.json  memory.json  plan.json
backups/: plan_20250718_165729.json
docs/: index.html  plugins.md  previews.md
feeds/: ingestion.py
scripts/: check_alembic_heads.py  fetch_medium_link.scpt  safari_control.scpt  safari_fill.scpt
spec/: auto_publish_pipeline_integration.md  docs_html.md  dump_fixtures.md  instagram_payload_adapter.md  instagram_pipeline_data_model.md  instagram_pipeline_phase1.md  load_fixtures.md  load_post.md  mark_published.md  preview_variables.md  publish_completed_replays_task.md  queue_replay.md  replay_fixture_task.md  replay_variables.md  safari_js_integration.md  validate_preview_json.md
tasks/: helpers.py
tests/: conftest.py  helpers.py  sample_feed.xml  test_api_ingest.py  test_auto_publish_pipeline_integration.py  test_code_synthesizer.py  test_compose_post.py  test_control_safari.py  test_delete_preview_cli.py  test_dump_load_fixtures.py  test_feed_parsing.py  test_fixture_templates.py  test_git_utils.py  test_html_helpers.py  test_html_utils.py  test_ingest_backfill.py  test_ingest_scheduler.py  test_ingestion.py  test_instagram_adapter.py  (+32 more)
(+177 files in other folders)
