[project]
name = "auto"
version = "0.1.0"
dependencies = [
  "SQLAlchemy>=2.0.32",
  "alembic",
  "fastapi",
  "uvicorn",
  "python-dotenv",
  "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

