[project]
name = "auto"
version = "0.1.0"
dependencies = [
  "SQLAlchemy>=2.0.32",
  "alembic",
  "fastapi",
  "uvicorn",
  "python-dotenv",
  "beautifulsoup4",
  "lxml",
  "selenium",
  "jinja2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
  "pre-commit",
  "invoke",
  "dspy",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
